--- a/education.css
+++ b/education.css
@@ -30,15 +30,11 @@ body {
     border-bottom: black solid 0.1em;
 }
 
-/*------------- SMALL SCREENS (COL-SM-) ------------------------*/
-@media screen and (min-width: 576px) {
-    
-}
 /*------------- MEDIUM SCREENS (COL-MD-) -----------------------*/
 @media screen and (min-width: 768px) {
 
     html::-webkit-scrollbar {
-        width: 10px;
+        width: 1em;
         background: white;
     }
     
@@ -56,18 +52,6 @@ body {
     }
         
 }
-/*------------- LARGE SCREENS (COL-LG-) ------------------------*/
-@media screen and (min-width: 992px) {
-    
-}
-/*------------- EXTRA LARGE SCREENS (COL-XL-) ------------------*/
-@media screen and (min-width: 1200px) {
-    
-}
-/*[END] -------- ENORMOUS SCREENS (COL-XL-) ----------------------*/
-@media screen and (min-width: 1400px) {
-
-}
 
 /*\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ HEADER \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\*/
 /*====================================================== MAIN CONTENT ===================================================================*/
@@ -84,34 +68,9 @@ header {
     position: fixed;
     width: 100%;
     z-index: 1;
+    font-size: 1em;
 }
 
-/*------------- SMALL SCREENS (COL-SM-) ------------------------*/
-@media screen and (min-width: 576px) {
-    header {
-        font-size: 1em;
-    }
-}
-/*------------- MEDIUM SCREENS (COL-MD-) -----------------------*/
-@media screen and (min-width: 768px) {
-    
-}
-/*------------- LARGE SCREENS (COL-LG-) ------------------------*/
-@media screen and (min-width: 992px) {
-
-}
-/*------------- EXTRA LARGE SCREENS (COL-XL-) ------------------*/
-@media screen and (min-width: 1200px) {
-    
-    header {
-        font-size: 1.3em;
-    }
-
-}
-/*[END] -------- ENORMOUS SCREENS (COL-XL-) ----------------------*/
-@media screen and (min-width: 1400px) {
-
-}
 /*====================================================== NAVIGATION PANE ================================================================*/
 
 /*[START] ------ EXTRA SMALL SCREENS (COL-) ---------------------*/
@@ -136,12 +95,6 @@ header {
         .active a { 
             color: #E8B130 !important;
         }
-        
-        /*I determined how to customize the navbar toggler using the following two websites:
-            https://www.geeksforgeeks.org/how-to-change-hamburger-toggler-color-in-bootstrap/
-            and
-            https://github.com/yui/yuicompressor/issues/274
-        */
                   
         .custom-toggler .navbar-toggler {
             position: relative;
@@ -193,6 +146,7 @@ header {
                     flex-flow: row wrap;
                     justify-content: center;
                     align-content: center;
+                    font-size: 1.5em;
                 }
         
                 .nav-item a:hover {
@@ -238,10 +192,22 @@ header {
         position: relative;
         top: initial;
     }
+
+    .navbar-nav {
+        background-color: #494850;
+        height: 4em;
+        border-bottom: solid #e8b130 0.1em;
+    }
+    
+        .nav-item {
+            max-width: 18ch;
+        }
+
+            .nav-item a {
+                font-size: 1em;
+            }
 }
-/*------------- LARGE SCREENS (COL-LG-) ------------------------*/
-@media screen and (min-width: 992px) {
-}
+
 /*------------- EXTRA LARGE SCREENS (COL-XL-) ------------------*/
 @media screen and (min-width: 1200px) {
 
@@ -263,41 +229,13 @@ header {
         top: initial;
     }   
 }
-/*[END] -------- ENORMOUS SCREENS (COL-XL-) ----------------------*/
-@media screen and (min-width: 1400px) {
-}
-/*====================================================== SOCIAL MEDIA AND CONTACT =======================================================*/
-
-/*[START] ------ EXTRA SMALL SCREENS (COL-) ---------------------*/
-
-/*------------- SMALL SCREENS (COL-SM-) ------------------------*/
-@media screen and (min-width: 576px) {
-    
-}
-/*------------- MEDIUM SCREENS (COL-MD-) -----------------------*/
-@media screen and (min-width: 768px) {
-        
-}
-/*------------- LARGE SCREENS (COL-LG-) ------------------------*/
-@media screen and (min-width: 992px) {
-    
-}
-/*------------- EXTRA LARGE SCREENS (COL-XL-) ------------------*/
-@media screen and (min-width: 1200px) {
-    
-}
-/*[END] -------- ENORMOUS SCREENS (COL-XL-) ----------------------*/
-@media screen and (min-width: 1400px) {
-
-}
-
 
 /*\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ MAIN \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\*/
 
 /*[START] ------ EXTRA SMALL SCREENS (COL-) ---------------------*/
 
     main {
-        padding-top: 5vh;
+        padding-top: 4em;
         background-color: #67AAF9;
     }
 
@@ -305,26 +243,31 @@ header {
             display: flex;
             flex-flow: row wrap;
             justify-content: center;
-            margin-top: 5vh;
+            align-items: center;
+            padding: 0;
+            margin: 0;
+            color: #FFFFFF;
         }
 
             .experience * {
-                color: #FFFFFF;
                 line-height: 1.6em;
             }
 
             .e-about {
-                margin: 3vh 0 3vh 0;
                 display: flex;
                 flex-flow: row wrap;
                 justify-content: center;
                 align-content: center;
-                padding: 0;
-                border-radius: 10px;
+                padding: 1em 0.5em;
+                margin: 0 0 1em 0;
+                font-size: 1.5em;
+                color: #FFFFFF;
+                text-align: center;
             }
 
                 .e-titles {
-                    font-size: 1.5em;
+                    font-size: 2em;
+                    padding: 0.3em 0;
                     color: white;
                     background-color: #494850;
                     border-top: #e8b130 solid 0.1em;
@@ -332,219 +275,43 @@ header {
                     text-align: center;
                 }
 
-                .e-co {
-                    margin-top: 5vh;
-                    font-size: 1.2em;
-                    color: #FFFFFF;
-                    text-align: center;
+                h3 {
+                    color: white;
+                    font-weight: bold;
+                    font-size: 1em;
+                    border: solid 0.2em white;
+                    line-height: 1.6em;
+                    display: block;
+                    width: 55ch;
                 }
 
-                .e-time {
-                    font-size: 1.1em;
-                    color: #FFFFFF;
-                    text-align: center;
-                }
-              
-                    .e-time i {
-                        font-size: 1.1em;
-                        color: #FFFFFF;
-                        text-align: center;
+                    h3 span {
+                        border-top: solid white 0.1em;
+                        display: inline-block;
                     }
 
-                .e-location {
-                    font-size: 1.1em;
-                    color: #FFFFFF;
-                    text-align: center;
+            .e-about img {
+                max-height: 15ch;
+                width: 100%;
+                height: auto;
+                object-fit: contain;
+                margin-bottom: 1em;
+                padding: 1em;
+                background-color: white;
+                border-top: #494850 double 0.5em;
+                border-bottom: #494850 double 0.5em;
+                border-left: #494850 double 0.5em;
+                border-right: #494850 double 0.5em;
+            }
+
+                #ths {
+                    background-color: black;
+                    border-top: white double 0.5em;
+                    border-bottom: white double 0.5em;
+                    border-left: white double 0.5em;
+                    border-right: white double 0.5em;
                 }
 
-                .e-about ul {
-                    font-size: 1.1em;
-                    padding: 0;
-                }
-
-                .e-about ul li {
-                    margin: 5vh 0 5vh 0;
-                    list-style-position: inside;
-                    list-style-type: none;
-                }
-
-        .image_and_link {
-            display: flex;
-            flex-flow: row wrap;
-            justify-content: center;
-            align-content: center;
-            background-color: white;
-            padding: 0;
+        .experience p {
             margin: 0;
-            border-radius: 10px;
         }
-
-            .image_and_link img {
-                margin: 1em;
-            }
-
-            .image_and_link iframe {
-                margin: 1em;
-            }
-
-        #scc {
-            background-color: white;
-            padding: 1em;
-            border-radius: 10px;
-        }
-
-        #hcc {
-            background-color: #22311d;
-            padding: 1em;
-            border-radius: 10px;
-        }
-
-        #unc {
-            border-radius: 10px;
-            background-color: white;
-            padding: 1em;
-        }
-
-        #ths {
-            border-radius: 10px;
-            background-color: black;
-            padding: 1em;
-        }
-
-        #cssc_pic {
-            background-color: white;
-            border-radius: 5%;
-        }
-
-        #kinesin {
-            height: 30vh;
-        }
-
-/*------------- SMALL SCREENS (COL-SM-) ------------------------*/
-@media screen and (min-width: 576px) {
-    
-    .e-about ul {
-        font-size: 1.1rem;
-        display: flex;
-        flex-flow: row wrap;
-        justify-content: flex-end;
-    }
-
-    .e-about ul li {
-        margin: 1vh 0 1vh 0;
-    }
-    
-}
-/*------------- MEDIUM SCREENS (COL-MD-) -----------------------*/
-@media screen and (min-width: 768px) {
-
-    /*-------Experience----------------*/
-    
-        .experience * {
-            line-height: 1.6em;
-        }
-
-            .e-titles {
-                font-size: 2rem;
-                line-height: 2.5em;
-            }
-
-            .e-co {
-                font-size: 1.3rem;
-            }
-
-            .e-time {
-                font-size: 1.3rem;
-            }
-            
-                .e-time i {
-                    font-size: 1.3rem;
-                }
-
-            .e-location {
-                font-size: 1.3rem;
-                    }
-    
-        #kinesin {
-            height: 50vh;
-        }
-
-    /*-------Education---------*/
-
-        #unc {
-            margin-top: 5vh; 
-        }
-        
-}
-/*------------- LARGE SCREENS (COL-LG-) ------------------------*/
-@media screen and (min-width: 992px) {
-    
-}
-/*------------- EXTRA LARGE SCREENS (COL-XL-) ------------------*/
-@media screen and (min-width: 1200px) {
-    
-}
-/*[END] -------- ENORMOUS SCREENS (COL-XL-) ----------------------*/
-@media screen and (min-width: 1400px) {
-
-}
-
-
-
-
-/*\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ FOOTER \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\*/
-
-/*[START] ------ EXTRA SMALL SCREENS (COL-) ---------------------*/
-
-/*------------- SMALL SCREENS (COL-SM-) ------------------------*/
-@media screen and (min-width: 576px) {
-    
-}
-/*------------- MEDIUM SCREENS (COL-MD-) -----------------------*/
-@media screen and (min-width: 768px) {
-        
-}
-/*------------- LARGE SCREENS (COL-LG-) ------------------------*/
-@media screen and (min-width: 992px) {
-    
-}
-/*------------- EXTRA LARGE SCREENS (COL-XL-) ------------------*/
-@media screen and (min-width: 1200px) {
-    
-}
-/*[END] -------- ENORMOUS SCREENS (COL-XL-) ----------------------*/
-@media screen and (min-width: 1400px) {
-
-}
-
-
-
-
-/*\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ OTHER \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\*/
-
-/*[START] ------ EXTRA SMALL SCREENS (COL-) ---------------------*/
-
-/*------------- SMALL SCREENS (COL-SM-) ------------------------*/
-@media screen and (min-width: 576px) {
-    
-}
-/*------------- MEDIUM SCREENS (COL-MD-) -----------------------*/
-@media screen and (min-width: 768px) {
-        
-}
-/*------------- LARGE SCREENS (COL-LG-) ------------------------*/
-@media screen and (min-width: 992px) {
-    
-}
-/*------------- EXTRA LARGE SCREENS (COL-XL-) ------------------*/
-@media screen and (min-width: 1200px) {
-    
-}
-/*[END] -------- ENORMOUS SCREENS (COL-XL-) ----------------------*/
-@media screen and (min-width: 1400px) {
-
-}
-/*---------------------- PRINTING -------------------------------*/
-@media print {
-
-}
